src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'boolean'", "'do'", 
                     "'else'", "'float'", "'for'", "'function'", "'if'", 
                     "'integer'", "'return'", "'string'", "'while'", "'void'", 
                     "'out'", "'continue'", "'of'", "'inherit'", "'array'", 
                     "<INVALID>", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", 
                     "'||'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
                     "'::'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'.'", 
                     "','", "';'", "':'", "'='" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "BOOLEAN", "DO", "ELSE", 
                      "FLOAT", "FOR", "FUNCTION", "IF", "INTEGER", "RETURN", 
                      "STRING", "WHILE", "VOID", "OUT", "CONTINUE", "OF", 
                      "INHERIT", "ARRAY", "ADDOP", "SUBOP", "MULOP", "DIVOP", 
                      "REMOP", "NOTOP", "ANDOP", "OROP", "EQOP", "NEQOP", 
                      "LTOP", "LEQOP", "GTOP", "GEQOP", "SCCOP", "LRB", 
                      "RRB", "LSB", "RSB", "LCB", "RCB", "DOT", "COMMA", 
                      "SM", "CM", "EQUAL", "INTLIT", "FLOATLIT", "BOOLIT", 
                      "STRLIT", "ID", "COMMENT", "WS", "ERROR_CHAR", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_decl = 2
    RULE_arr_lit = 3
    RULE_arr_ele_list = 4
    RULE_array_typ = 5
    RULE_dimslist = 6
    RULE_dims = 7
    RULE_element_typ = 8
    RULE_arr_ele_access = 9
    RULE_idxlist = 10
    RULE_var_decl = 11
    RULE_s_var_decl = 12
    RULE_l_var_decl = 13
    RULE_id_list = 14
    RULE_typ = 15
    RULE_param_list = 16
    RULE_param = 17
    RULE_func_decl = 18
    RULE_func_proto = 19
    RULE_ret_typ = 20
    RULE_expr_list = 21
    RULE_expr = 22
    RULE_expr1 = 23
    RULE_expr2 = 24
    RULE_expr3 = 25
    RULE_expr4 = 26
    RULE_expr5 = 27
    RULE_expr6 = 28
    RULE_expr7 = 29
    RULE_operand = 30
    RULE_idx_oprt = 31
    RULE_func_call = 32
    RULE_assign_stmt = 33
    RULE_if_stmt = 34
    RULE_for_stmt = 35
    RULE_while_stmt = 36
    RULE_dowhile_stmt = 37
    RULE_break_stmt = 38
    RULE_cont_stmt = 39
    RULE_return_stmt = 40
    RULE_call_stmt = 41
    RULE_block_stmt = 42
    RULE_stmt = 43

    ruleNames =  [ "program", "decls", "decl", "arr_lit", "arr_ele_list", 
                   "array_typ", "dimslist", "dims", "element_typ", "arr_ele_access", 
                   "idxlist", "var_decl", "s_var_decl", "l_var_decl", "id_list", 
                   "typ", "param_list", "param", "func_decl", "func_proto", 
                   "ret_typ", "expr_list", "expr", "expr1", "expr2", "expr3", 
                   "expr4", "expr5", "expr6", "expr7", "operand", "idx_oprt", 
                   "func_call", "assign_stmt", "if_stmt", "for_stmt", "while_stmt", 
                   "dowhile_stmt", "break_stmt", "cont_stmt", "return_stmt", 
                   "call_stmt", "block_stmt", "stmt" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    BOOLEAN=3
    DO=4
    ELSE=5
    FLOAT=6
    FOR=7
    FUNCTION=8
    IF=9
    INTEGER=10
    RETURN=11
    STRING=12
    WHILE=13
    VOID=14
    OUT=15
    CONTINUE=16
    OF=17
    INHERIT=18
    ARRAY=19
    ADDOP=20
    SUBOP=21
    MULOP=22
    DIVOP=23
    REMOP=24
    NOTOP=25
    ANDOP=26
    OROP=27
    EQOP=28
    NEQOP=29
    LTOP=30
    LEQOP=31
    GTOP=32
    GEQOP=33
    SCCOP=34
    LRB=35
    RRB=36
    LSB=37
    RSB=38
    LCB=39
    RCB=40
    DOT=41
    COMMA=42
    SM=43
    CM=44
    EQUAL=45
    INTLIT=46
    FLOATLIT=47
    BOOLIT=48
    STRLIT=49
    ID=50
    COMMENT=51
    WS=52
    ERROR_CHAR=53
    ILLEGAL_ESCAPE=54
    UNCLOSE_STRING=55

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decls(self):
            return self.getTypedRuleContext(MT22Parser.DeclsContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.decls()
            self.state = 89
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decls(self):
            return self.getTypedRuleContext(MT22Parser.DeclsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecls" ):
                return visitor.visitDecls(self)
            else:
                return visitor.visitChildren(self)




    def decls(self):

        localctx = MT22Parser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.decl()
                self.state = 92
                self.decls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MT22Parser.Var_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(MT22Parser.Func_declContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.func_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arr_litContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(MT22Parser.LCB, 0)

        def RCB(self):
            return self.getToken(MT22Parser.RCB, 0)

        def arr_ele_list(self):
            return self.getTypedRuleContext(MT22Parser.Arr_ele_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arr_lit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArr_lit" ):
                return visitor.visitArr_lit(self)
            else:
                return visitor.visitChildren(self)




    def arr_lit(self):

        localctx = MT22Parser.Arr_litContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arr_lit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(MT22Parser.LCB)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.SUBOP) | (1 << MT22Parser.NOTOP) | (1 << MT22Parser.LCB) | (1 << MT22Parser.INTLIT) | (1 << MT22Parser.FLOATLIT) | (1 << MT22Parser.BOOLIT) | (1 << MT22Parser.STRLIT) | (1 << MT22Parser.ID))) != 0):
                self.state = 102
                self.arr_ele_list()


            self.state = 105
            self.match(MT22Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arr_ele_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def arr_ele_list(self):
            return self.getTypedRuleContext(MT22Parser.Arr_ele_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arr_ele_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArr_ele_list" ):
                return visitor.visitArr_ele_list(self)
            else:
                return visitor.visitChildren(self)




    def arr_ele_list(self):

        localctx = MT22Parser.Arr_ele_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arr_ele_list)
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.expr()
                self.state = 108
                self.match(MT22Parser.COMMA)
                self.state = 109
                self.arr_ele_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def dimslist(self):
            return self.getTypedRuleContext(MT22Parser.DimslistContext,0)


        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def element_typ(self):
            return self.getTypedRuleContext(MT22Parser.Element_typContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_array_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_typ" ):
                return visitor.visitArray_typ(self)
            else:
                return visitor.visitChildren(self)




    def array_typ(self):

        localctx = MT22Parser.Array_typContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_array_typ)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(MT22Parser.ARRAY)
            self.state = 115
            self.dimslist()
            self.state = 116
            self.match(MT22Parser.OF)
            self.state = 117
            self.element_typ()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimslistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(MT22Parser.LSB, 0)

        def dims(self):
            return self.getTypedRuleContext(MT22Parser.DimsContext,0)


        def RSB(self):
            return self.getToken(MT22Parser.RSB, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_dimslist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimslist" ):
                return visitor.visitDimslist(self)
            else:
                return visitor.visitChildren(self)




    def dimslist(self):

        localctx = MT22Parser.DimslistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dimslist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(MT22Parser.LSB)
            self.state = 120
            self.dims()
            self.state = 121
            self.match(MT22Parser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MT22Parser.INTLIT, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def dims(self):
            return self.getTypedRuleContext(MT22Parser.DimsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dims

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDims" ):
                return visitor.visitDims(self)
            else:
                return visitor.visitChildren(self)




    def dims(self):

        localctx = MT22Parser.DimsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_dims)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.match(MT22Parser.INTLIT)
                self.state = 124
                self.match(MT22Parser.COMMA)
                self.state = 125
                self.dims()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.match(MT22Parser.INTLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Element_typContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_element_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElement_typ" ):
                return visitor.visitElement_typ(self)
            else:
                return visitor.visitChildren(self)




    def element_typ(self):

        localctx = MT22Parser.Element_typContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_element_typ)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arr_ele_accessContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def LSB(self):
            return self.getToken(MT22Parser.LSB, 0)

        def idxlist(self):
            return self.getTypedRuleContext(MT22Parser.IdxlistContext,0)


        def RSB(self):
            return self.getToken(MT22Parser.RSB, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_arr_ele_access

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArr_ele_access" ):
                return visitor.visitArr_ele_access(self)
            else:
                return visitor.visitChildren(self)




    def arr_ele_access(self):

        localctx = MT22Parser.Arr_ele_accessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arr_ele_access)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(MT22Parser.ID)
            self.state = 132
            self.match(MT22Parser.LSB)
            self.state = 133
            self.idxlist()
            self.state = 134
            self.match(MT22Parser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdxlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MT22Parser.INTLIT, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def idxlist(self):
            return self.getTypedRuleContext(MT22Parser.IdxlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idxlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdxlist" ):
                return visitor.visitIdxlist(self)
            else:
                return visitor.visitChildren(self)




    def idxlist(self):

        localctx = MT22Parser.IdxlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_idxlist)
        try:
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.match(MT22Parser.INTLIT)
                self.state = 137
                self.match(MT22Parser.COMMA)
                self.state = 138
                self.idxlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.match(MT22Parser.INTLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SM(self):
            return self.getToken(MT22Parser.SM, 0)

        def s_var_decl(self):
            return self.getTypedRuleContext(MT22Parser.S_var_declContext,0)


        def l_var_decl(self):
            return self.getTypedRuleContext(MT22Parser.L_var_declContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = MT22Parser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 142
                self.s_var_decl()
                pass

            elif la_ == 2:
                self.state = 143
                self.l_var_decl()
                pass


            self.state = 146
            self.match(MT22Parser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class S_var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(MT22Parser.Id_listContext,0)


        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_s_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitS_var_decl" ):
                return visitor.visitS_var_decl(self)
            else:
                return visitor.visitChildren(self)




    def s_var_decl(self):

        localctx = MT22Parser.S_var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_s_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.id_list()
            self.state = 149
            self.match(MT22Parser.CM)
            self.state = 150
            self.typ()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class L_var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def l_var_decl(self):
            return self.getTypedRuleContext(MT22Parser.L_var_declContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def arr_lit(self):
            return self.getTypedRuleContext(MT22Parser.Arr_litContext,0)


        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def EQUAL(self):
            return self.getToken(MT22Parser.EQUAL, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_l_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitL_var_decl" ):
                return visitor.visitL_var_decl(self)
            else:
                return visitor.visitChildren(self)




    def l_var_decl(self):

        localctx = MT22Parser.L_var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_l_var_decl)
        try:
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.match(MT22Parser.ID)
                self.state = 153
                self.match(MT22Parser.COMMA)
                self.state = 154
                self.l_var_decl()
                self.state = 155
                self.match(MT22Parser.COMMA)
                self.state = 158
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 156
                    self.expr()
                    pass

                elif la_ == 2:
                    self.state = 157
                    self.arr_lit()
                    pass


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.match(MT22Parser.ID)
                self.state = 161
                self.match(MT22Parser.CM)
                self.state = 162
                self.typ()
                self.state = 163
                self.match(MT22Parser.EQUAL)
                self.state = 166
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 164
                    self.expr()
                    pass

                elif la_ == 2:
                    self.state = 165
                    self.arr_lit()
                    pass


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

